--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.1
   shared_preferences: ^2.0.9
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
