--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   shared_preferences: ^2.0.9
   flutter_staggered_grid_view: ^0.4.1
   badges: ^2.0.2
+  backdrop: ^0.6.2
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
