--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.1
   badges: ^2.0.2
   backdrop: ^0.6.2
+  carousel_pro_nullsafety: ^1.0.2
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
