--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   badges: ^2.0.2
   backdrop: ^0.6.2
   carousel_pro_nullsafety: ^1.0.2
+  flutter_swiper_null_safety: ^1.0.2
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
