--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.1
   shared_preferences: ^2.0.9
   wave: ^0.2.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_lints: ^1.0.0
