--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.0.9
   wave: ^0.2.0
   image_picker: ^0.8.4+4
+  firebase_core: ^1.10.6
+  firebase_auth: ^3.3.4
 
 dev_dependencies:
   flutter_lints: ^1.0.0
