--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,17 @@
 .pub-cache/
 .pub/
 /build/
-/google-services.json
-/GoogleService-Info.plist
+
+#ios specific
+ios/.generated/
+ios/Podfile*
+ios/Flutter/Debug.xcconfig
+ios/Flutter/Release.xcconfig
+ios/Runner.xcworkspace/contents.xcworkspacedata
+
+#android specific
+android/app/google-services.json
+android/key.properties
 
 # Web related
 lib/generated_plugin_registrant.dart
