--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^0.8.4+4
   firebase_core: ^1.10.6
   firebase_auth: ^3.3.4
+  google_sign_in: ^5.2.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
