--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^1.10.6
   firebase_auth: ^3.3.4
   google_sign_in: ^5.2.1
+  cloud_firestore: ^3.1.5
 
 dev_dependencies:
   flutter_lints: ^1.0.0
