--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_sign_in: ^5.2.1
   cloud_firestore: ^3.1.5
   firebase_storage: ^10.2.4
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_lints: ^1.0.0
