--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,25 @@ dependencies:
   backdrop: ^0.6.2
   badges: ^2.0.2
   carousel_pro_nullsafety: ^1.0.2
+  cloud_firestore: ^3.1.5
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.3.4
+  firebase_core: ^1.10.6
+  firebase_storage: ^10.2.4
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.4.1
   flutter_swiper_null_safety: ^1.0.2
+  google_sign_in: ^5.2.1
+  image_picker: ^0.8.4+4
   provider: ^6.0.1
   shared_preferences: ^2.0.9
-  wave: ^0.2.0
-  image_picker: ^0.8.4+4
-  firebase_core: ^1.10.6
-  firebase_auth: ^3.3.4
-  google_sign_in: ^5.2.1
-  cloud_firestore: ^3.1.5
-  firebase_storage: ^10.2.4
   uuid: ^3.0.5
+  wave: ^0.2.0
+  http: ^0.13.4
+  stripe_payment: ^1.1.4
+  fluttertoast: ^8.0.8
+  progress_dialog: ^1.2.4
 
 dev_dependencies:
   flutter_lints: ^1.0.0
